<?xml version="1.0"?>
<package>
  <name>insole_driver</name>
  <version>0.0.0</version>
  <description>The insole package</description>

  <maintainer email="chris.long@st.ovgu.de">sptr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
