<?xml version="1.0"?>
<package>
  <name>ros_messages</name>
  <version>0.0.0</version>
  <description>The ros_messages package</description>

  <maintainer email="hamann@todo.todo">hamann</maintainer>

  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
